# backend

./: .gitignore  example.json  main.py  pyproject.toml  readme.md
app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/routes/: images.py  projects.py  text_annotation.py
app/services/: base_annotation.py  classification_annotation.py  ner_annotation.py  sentiment_annotation.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
