[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = [" Mohit Kirtane <mohit.kirtane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
motor = "^3.5.1"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
