[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mohit <mohit.kirtane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
motor = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "PYTHONPATH=./ uvicorn main:app --reload"
